update retro version